--- a/index.html
+++ b/index.html
@@ -153,4 +153,5 @@
 絶対パスで城西大学経営学部へリンクします。</a>
 <br> 
 <a href="mailto:info@yahoo.com">メール（実際には動きません）</a><br> 
-<a href="https://www.josai.ac.jp/"><img src="./image/josai.png" alt="keiei_small.jpg"></a>
+<a href="https://www.josai.ac.jp/">
+<a><img src="./image/josai.png" alt="keiei_small.jpg"></a>
