--- a/index.html
+++ b/index.html
@@ -154,4 +154,4 @@
 <br> 
 <a href="mailto:info@yahoo.com">メール（実際には動きません）</a><br> 
 <a href="https://www.josai.ac.jp/">
-<a><img src="./image/josai.png" alt="keiei_small.jpg"></a>
+<img src="./image/josai.png" alt="keiei_small.jpg"></a>
