--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title> 6月2日　基本の基本</title>
+  <link rel="stylesheet" href="mystyle.css"> <!-- この行を追加 -->
 </head>
 <body>
   <!--文字の大きさの練習-->
@@ -154,4 +155,6 @@
 <br> 
 <a href="mailto:info@yahoo.com">メール（実際には動きません）</a><br> 
 <a href="https://www.josai.ac.jp/">
-<img src="./image/josai.png" alt="keiei_small.jpg"></a>
+<img src="./image/keiei_small.jpg" alt="17号館の写真"></a>
+</body>
+</html>
