--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <ol>
       <li>ほげほげ</li>
       <li>ほにゃらら</li>
+      <a id="abc">ここがabcの場所</a>
   </ol>
 <br>
 <br>
@@ -157,16 +158,6 @@
 <a href="a.html" target="_parent">ひとつ上の親フレームにリンクします</a><br>
 <a href="a.html" target="_top">フレームをすべて解除してリンクします</a><br>
 <a href="a.html" target="abc">abcという名前のフレームにリンクします</a><br>
-</html>
-</body>
-<br>
-<h1>練習3.3</h1>
-<br>
-<li>ほにゃらら</li>
-</ol>
-<a id=“abc”>ここがabcの場所</a>
-<dl>
-<dt>作者</dt>
 
 <a id="abc">ファイルの途中にabcという名前を付けます</a><br>
 <a href="#abc">abcと名前を付けた場所へリンクします</a><br>
