--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </details>
 </caption>
 <thead>
-<tr><th>長所</th><th>どこで食べるか</th><th>短所</th>
+<tr><th class="important">長所</th><th>どこで食べるか</th><th>短所</th>
 </tr>
 </thead>
 <tbody>
