--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title> 6月2日　基本の基本</title>
   <link rel="stylesheet" href="mystyle.css"> <!-- この行を追加 -->
+  <script src="myjs.js"></script>  <!--この行を追加 -->
 </head>
 <body>
   <!--文字の大きさの練習-->
@@ -174,7 +175,16 @@
 <br>
 <h1>練習3.4</h1>
 <br>
-<a href=“https://www.josai.ac.jp/news/20200615-04.html”>
+<aside class="ad">
+<h1>広報</h1>
+<a href=
+"https://www.josai.ac.jp/club/jyosisofuto.html">
+<section>
+<h1>城西大学 女子ソフトボール部</h1>
+<p>女子ソフトボール部＜全日本総合女子ソフトボール選手権大会出場決定！＞
+</p>
+</section></a>
+<a href="https://www.josai.ac.jp/news/20200615-04.html">
 <section>
 <h1>城西大学　 JOSAI SPORTS FEILD </h1>
 <p> JOSAI SPORTS FIELD　建設・整備が進んでいます【城西大学 坂戸キャンパス】</p>
