--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li>ほげほげ</li>
       <li>ほにゃらら</li>
   </ol>
+  <script src ="myjs.js"> </script>
    <a id="abc">ここがabcの場所</a>
 <br>
 <br>
@@ -205,5 +206,8 @@
 <li><a>クラブ・サークル活動</a></li>
 </ul>
 </nav>
-
-
+<h1>イベントパンドラの練習</h1>
+<input type="button" value="ここをクリック"
+onclick="alert('Hello,Yuuki!');">
+</body>
+</html>
