--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title> 6月2日　基本の基本</title>
   <link rel="stylesheet" href="mystyle.css"> <!-- この行を追加 -->
   <script src="myjs.js"></script>  <!--この行を追加 -->
+  <script src="ex6-1.js"></script>
 </head>
 <body>
   <!--文字の大きさの練習-->
@@ -207,7 +208,12 @@
 <li><a>クラブ・サークル活動</a></li>
 </ul>
 </nav>
-<h1>イベントパンドラの練習</h1>
+<!--<h1>イベントパンドラの練習</h1>
 <input type="button" value="ここをクリック"
-onclick="alert('Hello,Yuuki!');">
-</html>
+ondblclick="alert('Hello,Yuuki!');">-->
+<input type="button" value="ここをクリック"
+oneclick="sayhellow();sayhellow();">
+<h1>練習</h1>
+<input type="button" value="ここをクリック"
+oneclick="alert('Goodbye,Yuuki');">
+
