--- a/index.html
+++ b/index.html
@@ -208,12 +208,9 @@
 <li><a>クラブ・サークル活動</a></li>
 </ul>
 </nav>
-<!--<h1>イベントパンドラの練習</h1>
+<h1>イベントパンドラの練習</h1>
 <input type="button" value="ここをクリック"
-ondblclick="alert('Hello,Yuuki!');">-->
-<input type="button" value="ここをクリック"
-oneclick="sayhellow();sayhellow();">
+ondblclick="alert('Hello,Yuuki!');">
 <h1>練習</h1>
 <input type="button" value="ここをクリック"
 oneclick="alert('Goodbye,Yuuki');">
-
