--- a/index.html
+++ b/index.html
@@ -213,4 +213,4 @@
 ondblclick="alert('Hello,Yuuki!');">
 <h1>練習</h1>
 <input type="button" value="ここをクリック"
-oneclick="alert('Goodbye,Yuuki');">
+ondblclick="alert('Goodbye,Yuuki');">
