--- a/index.html
+++ b/index.html
@@ -214,3 +214,6 @@ ondblclick="alert('Hello,Yuuki!');">
 <h1>練習</h1>
 <input type="button" value="ここをクリック"
 ondblclick="alert('Goodbye,Yuuki');">
+<h1>1.2　関数の呼び出し</h1>
+<input type="button"value="ここをクリック"
+onclick="sayhello61();">
