--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="myjs.js"></script>  <!--この行を追加 -->
   <script src="ex6-1.js"></script>
   <script src="ex6-5.js"></script>
+  <script src="ex6-7.js"></script>
 </head>
 <body>
   <!--文字の大きさの練習-->
@@ -222,3 +223,7 @@ onclick="sayhello61();">
 <input type="button" value="あいさつ" onclick="sayhello65();">
 <input type="button" value="太郎" onclick="taro65();">
 <input type="button" value="花子" onclick="hanako65();">
+<h1>引数の練習</h1>
+<input type="button" value="あいさつ" onclick="sayhello67();">
+<input type="button" value="太郎" onclick="someone('太郎');">
+<input type="button" value="花子" onclick="someone('花子');">
