--- a/index.html
+++ b/index.html
@@ -219,11 +219,22 @@ ondblclick="alert('Goodbye,Yuuki');">
 <h1>1.2　関数の呼び出し</h1>
 <input type="button" value="ここをクリック"
 onclick="sayhello61();">
-<h1>変数の練習</h1>
+<h1>変数の練習6-5</h1>
 <input type="button" value="あいさつ" onclick="sayhello65();">
 <input type="button" value="太郎" onclick="taro65();">
 <input type="button" value="花子" onclick="hanako65();">
-<h1>引数の練習</h1>
+<h1>演習6-6</h1>
+<input type="button" value="太郎" onclick="alert('太郎が来た！');">
+<input type="button" value="花子" onclick="alert('花子が来た！');">
+<h1>引数の練習6-7</h1>
 <input type="button" value="あいさつ" onclick="sayhello67();">
 <input type="button" value="太郎" onclick="someone('太郎');">
 <input type="button" value="花子" onclick="someone('花子');">
+<h1>演習6-7</h1>
+<input type="button" value="あいさつ" onclick="sayhello67();">
+<input type="button" value="レイ" onclick="someone('レイ');">
+<input type="button" value="アスカ" onclick="someone('アスカ');">
+<input type="button" value="シンジ" onclick="someone('シンジ');">
+<h1>JavaScriptによるページの変更</h1>
+
+
