--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="ex6-1.js"></script>
   <script src="ex6-5.js"></script>
   <script src="ex6-7.js"></script>
+  <script src="ex6-8.js"></script>
 </head>
 <body>
   <!--文字の大きさの練習-->
@@ -236,5 +237,11 @@ onclick="sayhello61();">
 <input type="button" value="アスカ" onclick="someone('アスカ');">
 <input type="button" value="シンジ" onclick="someone('シンジ');">
 <h1>JavaScriptによるページの変更</h1>
+<input type="button" value="あいさつ"　onclick="sayhello68();">
+<input type="button" value="太郎"　onclick="sayhello68();">
+<input type="button" value="花子"　onclick="sayhello68();">
+<p id="who68">World</p>
+
+
 
 
