--- a/index.html
+++ b/index.html
@@ -237,10 +237,14 @@ onclick="sayhello61();">
 <input type="button" value="アスカ" onclick="someone('アスカ');">
 <input type="button" value="シンジ" onclick="someone('シンジ');">
 <h1>JavaScriptによるページの変更</h1>
-<input type="button" value="あいさつ"　onclick="sayhello68();">
-<input type="button" value="太郎"　onclick="sayhello68();">
-<input type="button" value="花子"　onclick="sayhello68();">
+<input type="button" value="あいさつ" onclick="sayhello68();">
+<input type="button" value="太郎" onclick="taro68();">
+<input type="button" value="花子" onclick="hanako68();">
 <p id="who68">World</p>
+<h1>JavaScriptによるページの変更69</h1>
+<div id="txt1">
+<input type=button value="テキストの変更" onclick="txtchange1();">
+城西大学</div>
 
 
 
