--- a/index.html
+++ b/index.html
@@ -211,12 +211,18 @@
 <li><a>クラブ・サークル活動</a></li>
 </ul>
 </nav>
-<h1>イベントパンドラの練習</h1>
+<!--<h1>イベントパンドラの練習</h1>
 <input type="button" value="ここをクリック"
-ondblclick="alert('Hello,Yuuki!');">
-<h1>練習</h1>
+onclick="alert('Hello,Yuuki!');">-->
+<h1>練習6-2</h1>
 <input type="button" value="ここをクリック"
-ondblclick="alert('Goodbye,Yuuki');">
+onclick="sayhello61();">
+<h1>練習6-3</h1>
+<input type="button" value="ここをクリック"
+onclick="sayhello61();sayhello61();">
+<h1>練習6-4</h1>
+<input type="button" value="ここをクリック"
+onclick="alert('Goodbye,Yuuki');">
 <h1>1.2　関数の呼び出し</h1>
 <input type="button" value="ここをクリック"
 onclick="sayhello61();">
