--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="myjs.js"></script>  <!--この行を追加 -->
   <script src="ex6-1.js"></script>
   <script src="ex6-5.js"></script>
+  <script src="ex6-6.js"></script>
   <script src="ex6-7.js"></script>
   <script src="ex6-8.js"></script>
 </head>
@@ -231,6 +232,7 @@ onclick="sayhello61();">
 <input type="button" value="太郎" onclick="taro65();">
 <input type="button" value="花子" onclick="hanako65();">
 <h1>演習6-6</h1>
+<input type="button" value="あいさつ" onclick="sayhello66();">
 <input type="button" value="太郎" onclick="alert('太郎が来た！');">
 <input type="button" value="花子" onclick="alert('花子が来た！');">
 <h1>引数の練習6-7</h1>
