--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@ onclick="sayhello61();">
 <input type="button" value="太郎" onclick="taro65();">
 <input type="button" value="花子" onclick="hanako65();">
 <h1>演習6-6</h1>
+<input type="button" value="あいさつ" onclick="sayhello66();">
+<input type="button" value="太郎" onclick="taro66();">
+<input type="button" value="花子" onclick="hanako66();">
 <h1>引数の練習6-7</h1>
 <input type="button" value="あいさつ" onclick="sayhello67();">
 <input type="button" value="太郎" onclick="someone('太郎');">
