--- a/index.html
+++ b/index.html
@@ -255,6 +255,11 @@ onclick="sayhello61();">
 <div id="txt1">
 <input type=button value="テキストの変更" onclick="txtchange1();">
 城西大学</div>
+<h1>ex 6-10</h1>
+<div id ="image1">
+<input type="button" value="画像の変更" onclick="imgchange1();">
+<img src ='./image/bulbon.gif' id="logo" alt="JosaiLogo">  
+</div>
 
 
 
