--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -256,10 +257,12 @@ onclick="sayhello61();">
 <input type=button value="テキストの変更" onclick="txtchange1();">
 城西大学</div>
 <h1>ex 6-10</h1>
-<div id ="image1">
 <input type="button" value="画像の変更" onclick="imgchange1();">
-<img src ='./image/bulbon.gif' id="logo" alt="JosaiLogo">  
+<img src ='./image/josai.png' id="logo" alt="JosaiLogo">  
+<input type="button" value="もとに戻す" onclick="imgchange2();">
 </div>
+    
+
 
 
 
