--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="ex6-7.js"></script>
   <script src="ex6-8.js"></script>
   <script src="ex6-9.js"></script>
+   <script src="ex6-9.5.js"></script>
   <script src="ex6-10.js"></script>
 </head>
 <body>
@@ -261,7 +262,11 @@ onclick="sayhello61();">
 <img src ='./image/josai.png' id="logo" alt="JosaiLogo">  
 <input type="button" value="もとに戻す" onclick="imgchange2();">
 </div>
-    
+<h1>タイマーイベントによる実行</h1>
+<form name="timer"> 
+    <input type="button" value="スタート" onclick="startfnc()">
+    <br> 
+    <input type="text" name="moji" size="30" value=""> </form>
 
 
 
