--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@ onclick="sayhello61();">
 </div>
 <h1>タイマーイベントによる実行</h1>
 <form name="timer"> 
-    <input type="button" value="スタート" onclick="startfnc()">
+    <input type="button" value="スタート" onclick="startfnc();">
+    <input type="text" name="moji" size="30" value=""></form>
+    <input type="button" value="Timer" onclick="setTimeout('mes()',3000)"></form>
+<h1>タイマー</h1>
+<form name="timer"> <input type="button" value="スタート" onclick="hyoji()">
     <br> 
     <input type="text" name="moji" size="30" value=""> </form>
-
-
-
-
 
