--- a/index.html
+++ b/index.html
@@ -261,15 +261,13 @@ onclick="sayhello61();">
 <input type="button" value="画像の変更" onclick="imgchange1();">
 <img src ='./image/josai.png' id="logo" alt="JosaiLogo">  
 <input type="button" value="もとに戻す" onclick="imgchange2();">
-</div>
 <h1>タイマーイベントによる実行</h1>
 <form name="timer"> 
     <input type="button" value="スタート" onclick="startfnc();">
     <br>
     <input type="text" name="moji" size="30" value=""></form>
-    <input type="button" value="Timer" onclick="setTimeout('mes()',3000)"></form>
+    <input type="button" value="Timer" onclick="setTimeout('mes()',3000)">
 <h1>タイマー</h1>
 <form name="timer"> <input type="button" value="スタート" onclick="hyoji()">
     <br> 
-    <input type="text" name="moji" size="30" value=""> </form>
-
+    <input type="text" name="moji" size="30" value=""></form>
