--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@ onclick="sayhello61();">
 <form name="timer"> 
     <input type="button" value="スタート" onclick="startfnc();">
     <br>
-    <input type="text" name="moji" size="30" value=""></form>
-    <input type="button" value="Timer" onclick="setTimeout('mes()',3000)">
+    <input type="text" name="moji" size="30" value="">
+    </form>
 <h1>タイマー</h1>
 <form name="timer"> <input type="button" value="スタート" onclick="hyoji()">
     <br> 
-    <input type="text" name="moji" size="30" value=""></form>
+    <input type="text" name="moji" size="30" value="">
