--- a/index.html
+++ b/index.html
@@ -262,12 +262,15 @@ onclick="sayhello61();">
 <img src ='./image/josai.png' id="logo" alt="JosaiLogo">  
 <input type="button" value="もとに戻す" onclick="imgchange2();">
 <h1>タイマーイベントによる実行</h1>
-<form name="timer"> 
-    <input type="button" value="スタート" onclick="startfnc();">
-    <br>
-    <input type="text" name="moji" size="30" value="">
-    </form>
+<form name="timer">
+<input type="button" value="スタート" onclick="startfnc()">
+
+<br>
+
+<input type="text" name="moji" size="30" value="">
+</form>
 <h1>タイマー</h1>
-<form name="timer"> <input type="button" value="スタート" onclick="hyoji()">
+<form name="timer"> 
+    <input type="button" value="スタート" onclick="hyoji()">
     <br> 
     <input type="text" name="moji" size="30" value="">
