--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="ex6-9.js"></script>
    <script src="ex6-9.5.js"></script>
   <script src="ex6-10.js"></script>
+  <script scr="ex6-11.js"></script>
 </head>
 <body>
   <!--文字の大きさの練習-->
