--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@ onclick="sayhello61();">
 <h1>タイマーイベントによる実行</h1>
 <form name="timer"> 
 <input type="button" value="スタート" onclick="startfnc()">
-<br> 
-<input type="text" name="moji" size="30" value=""> </form>
+<br>
+<input type="text" name="moji" size="30" value="">
 <h1>タイマー</h1>
 <form name="timer"> 
     <input type="button" value="スタート" onclick="hyoji()">
