--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="ex6-7.js"></script>
   <script src="ex6-8.js"></script>
   <script src="ex6-9.js"></script>
-   <script src="ex6-9.5.js"></script>
+  <script src="ex6-9.5.js"></script>
   <script src="ex6-10.js"></script>
   <script scr="ex6-11.js"></script>
 </head>
@@ -262,13 +262,14 @@ onclick="sayhello61();">
 <input type="button" value="画像の変更" onclick="imgchange1();">
 <img src ='./image/josai.png' id="logo" alt="JosaiLogo">  
 <input type="button" value="もとに戻す" onclick="imgchange2();">
-<h1>タイマーイベントによる実行</h1>
+<h1>タイマーイベントによる実行6-10</h1>
 <form name="timer"> 
 <input type="button" value="スタート" onclick="startfnc()">
 <br>
-<input type="text" name="moji" size="30" value="">
-<h1>タイマー</h1>
+<input type="text" name="moji" size="30" value=""></form>
+<form> <input type="button" value="Timer" onclick="setTimeout('mes()',3000)"> </form>
+<h1>タイマーイベントによる実行6-11</h1>
 <form name="timer"> 
-    <input type="button" value="スタート" onclick="hyoji()">
-    <br> 
-    <input type="text" name="moji" size="30" value="">
+<input type="button" value="スタート" onclick="hyoji()">
+<br> 
+<input type="text" name="moji" size="30" value=""></form>
