--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="ex6-9.js"></script>
   <script src="ex6-9.5.js"></script>
   <script src="ex6-10.js"></script>
-  <script scr="ex6-11.js"></script>
+  <script scr="ex6-11a.js"></script>
 </head>
 <body>
   <!--文字の大きさの練習-->
@@ -269,7 +269,7 @@ onclick="sayhello61();">
 <input type="text" name="moji" size="30" value=""></form>
 <form> <input type="button" value="Timer" onclick="setTimeout('mes()',3000)"> </form>
 <h1>タイマーイベントによる実行6-11</h1>
-<form name="timer"> 
-<input type="button" value="スタート" onclick="hyoji()">
-<br> 
-<input type="text" name="moji" size="30" value=""></form>
+<form name="timer">
+<input type="button" value="スタート" onclick="hyoji()"><br>
+<input type="text" name="moji" size="30" value="">    
+</form>
