--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <title> 6月2日　基本の基本</title>
   <link rel="stylesheet" href="mystyle.css"> <!-- この行を追加 -->
-  <script src="myjs.js"></script>  <!--この行を追加 -->
-  <script src="ex6-1.js"></script>
-  <script src="ex6-5.js"></script>
-  <script src="ex6-6.js"></script>
-  <script src="ex6-7.js"></script>
-  <script src="ex6-8.js"></script>
-  <script src="ex6-9.js"></script>
-  <script src="ex6-9.5.js"></script>
-  <script src="ex6-10.js"></script>
-  <script scr="ex6-11a.js"></script>
+    <script src="myjs.js"></script>  <!--この行を追加 -->
+    <script src="ex6-1.js"></script>
+    <script src="ex6-5.js"></script>
+    <script src="ex6-6.js"></script>
+    <script src="ex6-7.js"></script>
+    <script src="ex6-8.js"></script>
+    <script src="ex6-9.js"></script>
+    <script src="ex6-9.5.js"></script>
+    <script src="ex6-10.js"></script>
+    <script src="ex6-11.js"></script>
 </head>
 <body>
   <!--文字の大きさの練習-->
@@ -269,7 +269,6 @@ onclick="sayhello61();">
 <input type="text" name="moji" size="30" value=""></form>
 <form> <input type="button" value="Timer" onclick="setTimeout('mes()',3000)"> </form>
 <h1>タイマーイベントによる実行6-11</h1>
-<form name="timer">
-<input type="button" value="スタート" onclick="hyoji()"><br>
-<input type="text" name="moji" size="30" value="">    
+<img src ='./image/dow.png' id="logo" alt="dop">
+<input type="button" value="3秒で変更" onclick="setTimeout('imgchange4()',3000)"><br>   
 </form>
