--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="ex6-9.5.js"></script>
     <script src="ex6-10.js"></script>
     <script src="ex6-11.js"></script>
+    <script src="ex6-12.js"></script>
 </head>
 <body>
   <!--文字の大きさの練習-->
@@ -269,6 +270,8 @@ onclick="sayhello61();">
 <input type="text" name="moji" size="30" value=""></form>
 <form> <input type="button" value="Timer" onclick="setTimeout('mes()',3000)"> </form>
 <h1>タイマーイベントによる実行6-11</h1>
-<img src ='./image/dow.png' id="logo" alt="dop">
-<input type="button" value="3秒で変更" onclick="setTimeout('imgchange4()',3000)"><br>   
-</form>
+<img src ='./image/dow.png' id="do" alt="dop">
+<form><input type="button" value="3秒で変更" onclick="setTimeout('imgchange4()',3000)"></form>
+<h1>タイマーイベントの画像変更の応用</h1>
+<img src ='./image/yuki.png' id="yu" alt="yukitoke">
+<form><input type="button" value="3秒で変更でまた戻る" onclick="imgchange6();setTimeout('imgchange5()',3000)"></form>
